@@ -1,6 +1,6 @@
 # Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/eclass/vmware.eclass,v 1.4 2006/08/11 13:56:18 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo-x86/eclass/vmware.eclass,v 1.6 2006/08/29 22:00:36 wolf31o2 Exp $
 
 # This eclass is for all vmware-* ebuilds in the tree and should contain all
 # of the common components across the multiple packages.
@@ -289,6 +289,9 @@ vmware_src_install() {
 }
 
 vmware_pkg_preinst() {
+	# This is run here due to bug #143150
+	[ -z "${product}" ] && vmware_determine_product
+
 	# This must be done after the install to get the mtimes on each file
 	# right.
 
